--- a/index.html
+++ b/index.html
@@ -487,6 +487,7 @@
           position: relative;
           /* top: 50px; */
           padding: 20px;
+          text-align: left;
         "
       >
         <div>
@@ -545,11 +546,14 @@
         class="text-md-left text-md-left mt-5 col foo bg-dark"
         style="padding-left: 40px; color: white; top: -50px"
       >
-        <div class="row mt-3">
+        <div class="row mt-3" style="text-align: left">
           <div class="col-md-3 col-lg-4 col-xl-3 mb-4">
             <h6 class="text-uppercase font-weight-bold">
-              Chartered Accountancy <br /><br />
-              <br />
+              Chartered Accountancy<br />
+              <hr
+                class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto"
+                style="width: 60px"
+              />
             </h6>
             <p>
               <i class="fas fa-home mr-3"></i> Bhartiya City Nikoo Homes
@@ -557,10 +561,6 @@
             </p>
             <p><i class="fas fa-envelope mr-3"></i> contact@thefate.tech</p>
             <p><i class="fas fa-phone mr-3"></i> +91 8095508777</p>
-            <hr
-              class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto"
-              style="width: 60px"
-            />
           </div>
 
           <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
