--- a/Contact/contacts.html
+++ b/Contact/contacts.html
@@ -32,49 +32,49 @@
       <div style="margin-left: 200px" class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0 lis ul1">
           <li class="nav-item" style="margin-left: 35px">
-            <a class="nav-link active a1" aria-current="page" href="../index.html">Home</a>
+            <a class="nav-link active a1" aria-current="page" href="../index.html" style="border-bottom: none;">Home</a>
           </li>
           <li class="nav-item dropdown" style="margin-left: 35px">
-            <a style="color: white" class="nav-link dropdown-toggle a1" href="aboutus.html" id="navbarDropdown"
-              role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a style="color: white;border: none;" class="nav-link dropdown-toggle a1" href="aboutus.html" id="navbarDropdown"
+              role="button" data-bs-toggle="dropdown" aria-expanded="false"  style="border-bottom: none;">
               About Us
             </a>
-            <ul class="dropdown-menu dr abtus" aria-labelledby="navbarDropdown" style="background-color: black; color: white;">
+            <ul class="dropdown-menu dr abtus" aria-labelledby="navbarDropdown" style="background-color: black; color: white;margin-left: -70px;">
               <li>
-                <a class="dropdown-item " href="../About Us/aboutus.html">Who are we?</a>
+                <a class="dropdown-item " href="../About Us/aboutus.html"  style="border-bottom: none;">Who are we?</a>
               </li>
               <li>
-                <a class="dropdown-item " href="../About Us/aboutus.html">Testimonials</a>
+                <a class="dropdown-item " href="../About Us/aboutus.html"  style="border-bottom: none;">Testimonials</a>
               </li>
             </ul>
           </li>
           <li class="nav-item dropdown" style="margin-left: 35px">
-            <a style="color: white" class="nav-link dropdown-toggle a1" href="services.html" id="navbarDropdown"
+            <a style="color: white;border:none;" class="nav-link dropdown-toggle a1" href="services.html" id="navbarDropdown"
               role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Services
             </a>
-            <ul class="dropdown-menu dr" aria-labelledby="navbarDropdown" style="background-color: black">
+            <ul class="dropdown-menu dr" aria-labelledby="navbarDropdown" style="background-color: black;margin-left: -70px;">
               <li>
-                <a class="dropdown-item" href="../Services/services.html">Our Services</a>
+                <a class="dropdown-item" href="../Services/services.html"  style="border-bottom: none;">Our Services</a>
               </li>
               <li>
-                <a class="dropdown-item" href="../Services/accounts.html">Accounts</a>
+                <a class="dropdown-item" href="../Services/accounts.html"  style="border-bottom: none;">Accounts</a>
               </li>
               <li>
-                <a class="dropdown-item" href="../Services/taxservices.html">Tax Services</a>
+                <a class="dropdown-item" href="../Services/taxservices.html"  style="border-bottom: none;"> Tax Services</a>
               </li>
               <li>
-                <a class="dropdown-item" href="../Services/payroll.html">Payroll</a>
+                <a class="dropdown-item" href="../Services/payroll.html"  style="border-bottom: none;">Payroll</a>
               </li>
-              <li><a class="dropdown-item" href="../Services/vat.html">VAT</a></li>
-              <li><a class="dropdown-item" href="../Services/cis.html">CIS</a></li>
+              <li><a class="dropdown-item" href="../Services/vat.html"  style="border-bottom: none;">VAT</a></li>
+              <li><a class="dropdown-item" href="../Services/cis.html"  style="border-bottom: none;">CIS</a></li>
             </ul>
           </li>
           <li class="nav-item" style="margin-left: 35px">
-            <a class="nav-link active a1" aria-current="page" href="../News/index.html">Latest News</a>
+            <a class="nav-link active a1" aria-current="page" href="../News/index.html"  style="border-bottom: none;">Latest News</a>
           </li>
           <li class="nav-item" style="margin-left: 35px">
-            <a class="nav-link active a1" aria-current="page" href="../Contact/contacts.html">Contact Us</a>
+            <a class="nav-link active a1" aria-current="page" href="../Contact/contacts.html"  style="border-bottom: none;">Contact Us</a>
           </li>
         </ul>
       </div>
@@ -85,9 +85,9 @@
   <!-- google map Start -->
   <div class="map-responsive">
     <h1 data-aos="fade-down" style="padding: 10px;font-weight: bolder;">You can reach us here</h1>
-    <iframe
+    <iframe class="map1"
       src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1471.7389986213082!2d77.64083172167855!3d13.084560947905702!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae19d279ada011%3A0x897e846c3de2cf6a!2sThe%20Fate%20Technologies!5e0!3m2!1sen!2sin!4v1616851172890!5m2!1sen!2sin"
-      width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+      width="600" height="450" style="border: 1px solid gray;height: 40vh;" allowfullscreen="" loading="lazy"></iframe>
   </div>
 
   <!-- goolge map end -->
