--- a/Services/cis.html
+++ b/Services/cis.html
@@ -34,49 +34,49 @@
       <div style="margin-left: 200px" class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0 lis ul1">
           <li class="nav-item" style="margin-left: 35px">
-            <a class="nav-link active a1" aria-current="page" href="../index.html">Home</a>
+            <a class="nav-link active a1" aria-current="page" href="../index.html" style="border-bottom: none;">Home</a>
           </li>
           <li class="nav-item dropdown" style="margin-left: 35px">
-            <a style="color: white" class="nav-link dropdown-toggle a1" href="aboutus.html" id="navbarDropdown"
+            <a style="color: white;border: none;" class="nav-link dropdown-toggle a1" href="aboutus.html" id="navbarDropdown"
               role="button" data-bs-toggle="dropdown" aria-expanded="false">
               About Us
             </a>
-            <ul class="dropdown-menu dr abtus" aria-labelledby="navbarDropdown" style="background-color: black">
+            <ul class="dropdown-menu dr abtus" aria-labelledby="navbarDropdown" style="background-color: black;margin-left: -70px;">
               <li>
-                <a class="dropdown-item " href="../About Us/aboutus.html">Who are we?</a>
+                <a class="dropdown-item " href="../About Us/aboutus.html" style="border-bottom: none;">Who are we?</a>
               </li>
               <li>
-                <a class="dropdown-item" href="../About Us/aboutus.html">Testimonials</a>
+                <a class="dropdown-item" href="../About Us/aboutus.html" style="border-bottom: none;">Testimonials</a>
               </li>
             </ul>
           </li>
           <li class="nav-item dropdown" style="margin-left: 35px">
-            <a style="color: white" class="nav-link dropdown-toggle a1" href="services.html" id="navbarDropdown"
+            <a style="color: white;border: none;" class="nav-link dropdown-toggle a1" href="services.html" id="navbarDropdown"
               role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Services
             </a>
-            <ul class="dropdown-menu dr" aria-labelledby="navbarDropdown" style="background-color: black">
+            <ul class="dropdown-menu dr" aria-labelledby="navbarDropdown" style="background-color: black;margin-left: -70px;">
               <li>
-                <a class="dropdown-item" href="services.html">Our Services</a>
+                <a class="dropdown-item" href="services.html" style="border-bottom: none;">Our Services</a>
               </li>
               <li>
-                <a class="dropdown-item" href="accounts.html">Accounts</a>
+                <a class="dropdown-item" href="accounts.html" style="border-bottom: none;">Accounts</a>
               </li>
               <li>
-                <a class="dropdown-item" href="taxservices.html">Tax Services</a>
+                <a class="dropdown-item" href="taxservices.html" style="border-bottom: none;">Tax Services</a>
               </li>
               <li>
-                <a class="dropdown-item" href="payroll.html">Payroll</a>
+                <a class="dropdown-item" href="payroll.html" style="border-bottom: none;">Payroll</a>
               </li>
-              <li><a class="dropdown-item" href="vat.html">VAT</a></li>
-              <li><a class="dropdown-item" href="cis.html">CIS</a></li>
+              <li><a class="dropdown-item" href="vat.html" style="border-bottom: none;">VAT</a></li>
+              <li><a class="dropdown-item" href="cis.html" style="border-bottom: none;">CIS</a></li>
             </ul>
           </li>
           <li class="nav-item" style="margin-left: 35px">
-            <a class="nav-link active a1" aria-current="page" href="../News/index.html">Latest News</a>
+            <a class="nav-link active a1" aria-current="page" href="../News/index.html" style="border-bottom: none;">Latest News</a>
           </li>
           <li class="nav-item" style="margin-left: 35px">
-            <a class="nav-link active a1" aria-current="page" href="../Contact/contacts.html">Contact Us</a>
+            <a class="nav-link active a1" aria-current="page" href="../Contact/contacts.html"style="border-bottom: none;">Contact Us</a>
           </li>
         </ul>
       </div>
