--- a/index.html
+++ b/index.html
@@ -90,12 +90,13 @@
                 class="nav-link active a1"
                 aria-current="page"
                 href="index.html"
+                style="border-bottom: none"
                 >Home</a
               >
             </li>
             <li class="nav-item dropdown" style="margin-left: 35px">
               <a
-                style="color: white"
+                style="color: white; border: none"
                 class="nav-link dropdown-toggle a1"
                 href="aboutus.html"
                 id="navbarDropdown"
@@ -108,15 +109,21 @@
               <ul
                 class="dropdown-menu dr abtus"
                 aria-labelledby="navbarDropdown"
-                style="background-color: black"
+                style="background-color: black; margin-left: -70px"
               >
                 <li>
-                  <a class="dropdown-item" href="About Us/aboutus.html"
+                  <a
+                    class="dropdown-item"
+                    style="border-bottom: none"
+                    href="About Us/aboutus.html"
                     >Who are we?</a
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="About Us/aboutus.html"
+                  <a
+                    class="dropdown-item"
+                    href="About Us/aboutus.html"
+                    style="border-bottom: none"
                     >Testimonials</a
                   >
                 </li>
@@ -124,7 +131,7 @@
             </li>
             <li class="nav-item dropdown" style="margin-left: 35px">
               <a
-                style="color: white"
+                style="color: white; border: none"
                 class="nav-link dropdown-toggle a1"
                 href="services.html"
                 id="navbarDropdown"
@@ -137,33 +144,55 @@
               <ul
                 class="dropdown-menu dr"
                 aria-labelledby="navbarDropdown"
-                style="background-color: black"
+                style="background-color: black; margin-left: -70px"
               >
                 <li>
-                  <a class="dropdown-item" href="Services/services.html"
+                  <a
+                    style="border-bottom: none"
+                    class="dropdown-item"
+                    href="Services/services.html"
                     >Our Services</a
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="Services/accounts.html"
+                  <a
+                    style="border-bottom: none"
+                    class="dropdown-item"
+                    href="Services/accounts.html"
                     >Accounts</a
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="Services/taxservices.html"
+                  <a
+                    style="border-bottom: none"
+                    class="dropdown-item"
+                    href="Services/taxservices.html"
                     >Tax Services</a
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="Services/payroll.html"
+                  <a
+                    style="border-bottom: none"
+                    class="dropdown-item"
+                    href="Services/payroll.html"
                     >Payroll</a
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="Services/vat.html">VAT</a>
+                  <a
+                    style="border-bottom: none"
+                    class="dropdown-item"
+                    href="Services/vat.html"
+                    >VAT</a
+                  >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="Services/cis.html">CIS</a>
+                  <a
+                    style="border-bottom: none"
+                    class="dropdown-item"
+                    href="Services/cis.html"
+                    >CIS</a
+                  >
                 </li>
               </ul>
             </li>
@@ -172,6 +201,7 @@
                 class="nav-link active a1"
                 aria-current="page"
                 href="News/index.html"
+                style="border-bottom: none"
                 >Latest News</a
               >
             </li>
@@ -180,6 +210,7 @@
                 class="nav-link active a1"
                 aria-current="page"
                 href="Contact/contacts.html"
+                style="border-bottom: none"
                 >Contact Us</a
               >
             </li>
@@ -487,7 +518,6 @@
           position: relative;
           /* top: 50px; */
           padding: 20px;
-          text-align: left;
         "
       >
         <div>
@@ -549,11 +579,8 @@
         <div class="row mt-3" style="text-align: left">
           <div class="col-md-3 col-lg-4 col-xl-3 mb-4">
             <h6 class="text-uppercase font-weight-bold">
-              Chartered Accountancy<br />
-              <hr
-                class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto"
-                style="width: 60px"
-              />
+              Chartered Accountancy <br /><br />
+              <br />
             </h6>
             <p>
               <i class="fas fa-home mr-3"></i> Bhartiya City Nikoo Homes
@@ -561,6 +588,10 @@
             </p>
             <p><i class="fas fa-envelope mr-3"></i> contact@thefate.tech</p>
             <p><i class="fas fa-phone mr-3"></i> +91 8095508777</p>
+            <hr
+              class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto"
+              style="width: 60px"
+            />
           </div>
 
           <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
