--- a/Contact/contacts.html
+++ b/Contact/contacts.html
@@ -83,9 +83,9 @@
   <!-- navbar End -->
 
   <!-- google map Start -->
-  <div class="map-responsive">
+  <div class="map-responsive map1">
     <h1 data-aos="fade-down" style="padding: 10px;font-weight: bolder;">You can reach us here</h1>
-    <iframe class="map1"
+    <iframe 
       src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1471.7389986213082!2d77.64083172167855!3d13.084560947905702!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae19d279ada011%3A0x897e846c3de2cf6a!2sThe%20Fate%20Technologies!5e0!3m2!1sen!2sin!4v1616851172890!5m2!1sen!2sin"
       width="600" height="450" style="border: 1px solid gray;height: 40vh;" allowfullscreen="" loading="lazy"></iframe>
   </div>
